welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:5: error: type mismatch;
 found   : (Int, Int)
 required: Int
      return (nums(i),i)
             ^indexOfValue:2: error: type mismatch;
 found   : Unit
 required: Int
  for (i  <- 0  to  nums.length-1) {
          ^